profilelist1exp/unpackaged/objects/ClickCountSetup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It is keeping a set of metadata specifically for any link where its click (with metadata info) will be recorded into SF1_Adoption__c.</description>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_URL__c</fullName>
        <label>Route To URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Action__c</fullName>
        <label>User Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Click Count Metadata Setup</label>
</CustomObject>